# gitget

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml
gitget/: __init__.py  __main__.py  cache.py  enums.py  gitstance.py  repo.py
gitget/providers/github/: repo.py
