[tool.poetry]
name = "gitget"
version = "0.1.0"
description = ""
authors = ["ArhanCodes <arhan@peakseducation.com>"]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.5.1"
python-dotenv = "^0.20.0"
PyGithub = "^1.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
