[tool.poetry]
name = "gitget"
version = "0.1.0"
description = "Get information on GitHub repositories"
authors = ["ArhanCodes <arhan@peakseducation.com>"]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.7.0"
pygithub = "^1.57"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
